Closed
Bug 417383
Opened 18 years ago
Closed 18 years ago
###!!! ASSERTION: Null document, notification came too late?: 'doc'
Categories
(Core :: General, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.9beta4
People
(Reporter: cbook, Assigned: bent.mozilla)
References
()
Details
(Keywords: assertion)
Attachments
(1 file)
|
1.16 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008021401 Firefox/3.0b4pre
Steps to reproduce:
Go to http://www.google.com/ig
Click on the "add a tab"
--> Assertion
###!!! ASSERTION: Null document, notification came too late?: 'doc', file /debug/mozilla/content/xul/templates/src/nsXULTemplateBuilder.cpp, line 1060
| Assignee | ||
Comment 1•18 years ago
|
||
I downgraded this to a warning, it's harmless. But I'd like to investigate why we see it.
Assignee: nobody → bent.mozilla
Comment 2•18 years ago
|
||
Reduced testcase plz? (Is iGoogle using XUL templates???)
| Assignee | ||
Comment 3•18 years ago
|
||
Assertion with stack is on the tinderboxes right now, keeping them orange. The windows stack has symbols.
Comment 4•18 years ago
|
||
This warning occurs frequently and by the dozen, cluttering up the console. Please disable the warning until you can fix it.
| Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.9beta4
Comment 6•18 years ago
|
||
Comment on attachment 304271 [details] [diff] [review]
Remove the warning
Yeah, this is harmless.
Attachment #304271 -
Flags: superreview+
Attachment #304271 -
Flags: review?(jst)
Attachment #304271 -
Flags: review+
Updated•18 years ago
|
Flags: blocking1.9+
| Assignee | ||
Updated•18 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•18 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008050621 Firefox/3.0pre and my steps to reproduce
--> Verified fixed
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•