Bug 417383 - Remove useless warning. r+sr=jst, a=blocking1.9+.